fix(menu): do not stretch menu items to full menu height (#5588)

--- a/src/styles/_dropdown-menu.less
+++ b/src/styles/_dropdown-menu.less
@@ -436,10 +436,6 @@
         max-height: 500px;
         flex-wrap: wrap;
         margin: 1.7rem 0 0 !important;
-
-        li {
-          flex: 22%;
-        }
       }
     }
 
